fix: topbar dropdowns should now have a higher z-index than page alerts

--- a/scss/components/_alerts.scss
+++ b/scss/components/_alerts.scss
@@ -15,7 +15,7 @@
 	top: $toast-affix-top;
 	right: $toast-affix-right;
 	width: $toast-max-width;
-	z-index: 1000;
+	z-index: 900;
 }
 
 .page-toasts {
